[package]
name = "schreme"
version = "0.1.0"
edition = "2024"

[dependencies]
ariadne = { version = "0.5.1", features = ["auto-color"] }
logos = "0.15.0"
rustyline = { version = "16.0.0", features = ["custom-bindings", "derive"] }
thiserror = "2.0.12"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "lexer_bench"
harness = false
